--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,14 +2,17 @@
 
 export(add_Population)
 export(add_Rule)
+export(convert_units)
 export(get_RuleBook)
 export(make_Sample)
 export(measure_SAR_OSL)
 export(prepare_Aliquot)
 export(prepare_Sieving)
+export(prepare_Subsample)
 export(set_Parameter)
 export(set_Rule)
 import(EMMAgeo)
+importFrom(stats,rgamma)
 importFrom(stats,rnorm)
 importFrom(stats,runif)
 importFrom(stats,splinefun)
