Add methods to import

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(prepare_Subsample)
 export(set_Parameter)
 export(set_Rule)
 import(EMMAgeo)
+importFrom(methods,is)
 importFrom(stats,rgamma)
 importFrom(stats,rnorm)
 importFrom(stats,runif)
