--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,7 @@ Depends:
 LazyData: TRUE
 Imports:
     EMMAgeo (>= 0.9.7),
+    methods,
     RLumModel (>= 0.2.9),
     Luminescence (>= 0.9.15),
     parallel
