--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,13 +2,14 @@ Package: sandbox
 Type: Package
 Title: Probablistic Numerical Modelling of Sediment Properties
 Version: 0.2.0
-Date: 2021-11-06
+Date: 2021-11-15
 Author: Michael Dietze [aut, cre] (<https://orcid.org/0000-0001-6063-1726>),
   Sebastian Kreutzer [aut] (<https://orcid.org/0000-0002-0734-2199>)
 Maintainer: Michael Dietze <mdietze@gfz-potsdam.de>
-Description: Flexible framework for definition and application of time/depth-
-    based rules for sets of parameters for single grains that can be used to create
-    synthetic samples, used for synthetic preparation and synthetic measurements.
+Description: A flexible framework for definition and application of time/depth-
+    based rules for sets of parameters for single grains that can be used to 
+    create artificial sediment profiles. Such profiles can be used for virtual 
+    sample preparation and synthetic, for instance, luminescence measurements.
 License: GPL-3
 BugReports: https://github.com/coffeemuggler/sandbox/issues
 Depends:
