--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,6 +1,12 @@
 ^.*\.Rproj$
 ^\.Rproj\.user$
 .github
+.DS_Store
+.RData
+.Rhistory
+.gitignore
+.Rproj.user
+.git
 LICENSE
 Documentation_sandbox.pdf
 Documentation_sandbox.Rmd
