--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: sandbox
 Type: Package
-Title: Probablistic Numerical Modelling of Sediment Properties
+Title: Probabilistic Numerical Modelling of Sediment Properties
 Version: 0.2.0
 Date: 2021-11-15
 Author: Michael Dietze [aut, cre] (<https://orcid.org/0000-0001-6063-1726>),
